--- a/CityExperWeb/Assets/css/winter-flat.css
+++ b/CityExperWeb/Assets/css/winter-flat.css
@@ -253,7 +253,7 @@ body .color-secondary.btn {
 }
 
 .section-color-primary {
-    background: #ddd;
+    background: #fff;
 }
 
 .section-color-secondary {
@@ -493,7 +493,7 @@ img {
 */
 
 .widget {
-    margin-bottom: 80px;
+    margin-bottom: 0px;
 }
 
 .row .col-md-3 .widget {
@@ -537,7 +537,7 @@ img {
 
 .widget-box {
     box-sizing: border-box;
-    padding: 40px 12px;
+    padding: 12px 12px;
 }
 
 .widget-contact-info h4 {
@@ -777,7 +777,7 @@ img {
 }
 
     .widget-form .form-additional .form-group-submit input {
-        color: white;
+        color: black;
     }
 
 body .widget-form .form-additional .btn-property {
@@ -2428,6 +2428,7 @@ form textarea.form-control {
 .form-additional {
     margin-bottom: 40px;
     margin-top: 30px;
+    padding:0px 10px;
 }
 
     .form-additional textarea,
@@ -2893,6 +2894,7 @@ body > div:not(.container-side-version) .h-side.h-side-results {
 }
 
 .property-preview-f-left {
+    font-size:11px;
     overflow: hidden;
     text-align: center;
     text-overflow: ellipsis;
@@ -3678,6 +3680,7 @@ section.page-body .h4 {
 .property-slider .carousel-inner > .item > img,
 .property-slider .img-fluid {
     height: 100%;
+    width:100%;
     object-fit: cover;
     -ms-object-fit: cover;
     -o-object-fit: cover;
@@ -4099,12 +4102,12 @@ body .footer .footer-mask {
     background: #464646;
     color: #fefefe;
     padding: 0;
-    padding-top: 80px;
+    padding-top: 20px;
 }
 
 .footer .footer-contant {
     background: url(../img/footer-bg.png) no-repeat 50% 100%;
-    padding-bottom: 80px;
+    padding-bottom: 20px;
 }
 
 body .footer .logo {
@@ -4152,7 +4155,7 @@ body .footer .logo {
             border-radius: 5px;
             color: #595959;
             display: block;
-            font-size: 17px;
+            font-size: 33px;
             height: 30px;
             line-height: 30px;
             text-align: center;
@@ -4250,7 +4253,7 @@ body .footer .list {
 .footer .footer-bottom {
     background: #303030;
     font-size: 15px;
-    padding: 40px 0;
+    padding: 5px 0;
 }
 
 body .footer .footer-bottom .container {
