--- a/CityExperWeb/Views/Shared/_SearchList.cshtml
+++ b/CityExperWeb/Views/Shared/_SearchList.cshtml
@@ -1,159 +1,107 @@
-﻿@{ 
+﻿<style>
+    .form-control {
+        color: #565656;
+        border: 1px #7bb1e0 solid;
+        font-size: 14px;
+        height: 42px;
+        min-width: 150px;
+        font-family: Roboto;
+    }
+
+    .col-md-1 {
+        margin-right: 5px;
+    }
+</style>
+@{
     CityExperWeb.Entity.CityExperDb2Entities entity = new CityExperWeb.Entity.CityExperDb2Entities(); //db ye bağlanmak için entity
 
     var cityList = entity.il.ToList();
 }
-<form action="#" class="form-horisontal" id="tasinmazForm" style="background:#76757582; position: absolute;width:250px; margin:6% -1%;z-index: 1; display:none">
-    <div class="row" id="menu" style="margin-top:15px;">
-        <div class="col-md-4  col-sm-2" id="TasınmazSearch" style="margin-top: 1%; width: 250px;">
-            <div class="col-md-12  col-sm-4" id="TasınmazSearch">
-                <div class="form-group">
-                    <select class="form-control " name="input" id="sorguform">
-                        <option value="0" disabled selected>Sorgulama Tipi</option>
-                        <option value="1">Adres Sorgusu</option>
-                        <option value="2">Kadastro Sorgusu</option>
+<form action="#" class="form-horisontal" id="tasinmazForm">
+    <div class="row shadow-lg" id="menu" style="padding:15px;">
+        <div class="col-md-12  col-sm-2" id="TasınmazSearch">
+            <!-- Search form -->
+            <div class="col-md-1">
+                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+            </div>
+            <div class="btn-group-justified col-md-1">
+                <a style="margin:0px 20px;" href=""> <img src="~/Assets/img/extra/shape2.png" /></a>
+                <a href=""><img src="~/Assets/img/extra/shape.png" /></a>
+            </div>
+            <div class="">
+                <div class="col-md-1  col-sm-2">
+                    <select class="form-control " name="input">
+                        <option value="0" disabled selected>Taşınmaz Tipi</option>
+                        <option value="1">Satılık</option>
+                        <option value="2">Kiralık</option>
+                        <option value="3">Teminat Alınan</option>
                     </select>
                 </div>
-            </div>
-            <div class="col-md-12  col-sm-4" id="TasınmazSearch">
-                <div class="form-group">
-                    <select class="form-control " name="input" id="sorguform">
+                <div class="col-md-1  col-sm-2">
+                    <select class="form-control " name="input">
                         <option value="0" disabled selected>Taşınmaz Türü</option>
                         <option value="1">Konut</option>
                         <option value="2">Arsa</option>
                         <option value="3">İş Yeri</option>
                     </select>
                 </div>
-            </div>
-            @*<div class="col-md-12 col-sm-2" id="TasınmazSearch">
-            <div class="form-group">
-                <select class="form-control " name="input">
-                    <option value="0" selected>Taşınmaz Tipi</option>
-                    <option value="1" selected>Konut</option>
-                    <option value="2" selected>Arsa/Arazi</option>
-                    <option value="3" selected>İş Yeri</option>
-                </select>
-            </div>
-        </div>*@
-        </div>
-
-
-        <div id="AdresForm" class="col-md-12  col-sm-8" style="margin-top:1%; display:none;">
-            <div class="col-md-12 col-sm-2" id="tasınmazsearch">
-                <div class="form-group">
+                <div class="col-md-1  col-sm-2">
                     <select class="form-control" id="il" name="input">
-                        <option value="" disabled selected>il</option>
+                        <option value="" disabled selected>İl</option>
                         @foreach (var il in cityList)
                         {
                             <option value="@il.il_id">@il.ilAdi</option>
                         }
                     </select>
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="form-group">
+                <div class="col-md-1  col-sm-2">
                     <select class="form-control" id="ilceListAdres" name="input">
                         <option value="" disabled selected>İlçe</option>
                     </select>
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="form-group">
+                <div class="col-md-1  col-sm-2">
                     <select class="form-control" id="MahalleListAdres" name="input">
                         <option value="" disabled selected>Mahalle</option>
                     </select>
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="form-group">
+                <div class="col-md-1  col-sm-2">
                     <select class="form-control" id="SokakListAdres" name="input">
                         <option value="" disabled selected>Cadde Sokak</option>
                     </select>
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="text" name="binaNo" value="" class="form-control" placeholder="Bina Numarası" />
-                    </div>
+                <div class="col-md-1  col-sm-2">
+                    <input type="text" name="binaNo" value="" class="form-control" placeholder="Bina Numarası" />
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-2" style="margin-top: 7%;">
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="text" name="daireNo" value="" class="form-control" placeholder="Daire Numarası" />
-                    </div>
+                <div class="col-md-1  col-sm-2">
+                    <input type="text" name="daireNo" value="" class="form-control" placeholder="Daire Numarası" />
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-1 form-group search-btn-box" id="TasınmazSearch">
-                <button type="submit" id="search-btn" class="btn btn-search focus-color" style="margin-left: 78%;margin-top: 5%;">
-                    <i class="fa fa-search"
-                       style="font-size: 25px;"></i>
-                </button>
-            </div>
-        </div>
-        <div id="KadastroForm" class="col-md-8  col-sm-8" style="margin-top:1%; display:none; width: 275px;">
-        
-            <div class="col-md-12 col-sm-2" id="TasınmazSearch">
-                <div class="form-group">
-                    <select class="form-control" id="il" name="input">
-                        <option value="" disabled selected>il</option>
-                        @foreach (var il in cityList)
-                        {
-                            <option value="@il.il_id">@il.ilAdi</option>
-                        }
-                    </select>
+                <div class="col-md-1  col-sm-2">
+                    <button style="background:none; border:none;">
+                        <img src="/Assets/img/ara.png" />
+                    </button>
                 </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="form-group">
-                    <select class="form-control" id="ilceListAdres2" name="input">
-                        <option value="" disabled selected>İlçe</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="form-group">
-                    <select class="form-control" id="MahalleList" name="input">
-                        <option value="" disabled selected>Mahalle</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-2">
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="text" name="adaNo" value="" class="form-control" placeholder="Ado Numarası" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-2" style="margin-top: 7%;">
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="text" name="parselNo" value="" class="form-control" placeholder="Parsel Numarası" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-2" style="margin-top: 7%;">
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="text" name="binaNo" value="" class="form-control" placeholder="Bina Numarası" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-2" style="margin-top: 7%;">
-                <div class="control-group">
-                    <div class="controls">
-                        <input type="text" name="daireNo" value="" class="form-control" placeholder="Daire Numarası" />
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-1 form-group search-btn-box">
-                <button type="submit" id="search-btn2" class="btn btn-search focus-color" style="margin-left: 78%;margin-top: 5%;">
-                    <i class="fa fa-search"
-                       style="font-size: 25px;"></i>
-                </button>
             </div>
         </div>
     </div>
-
+    <div class="col-md-8  col-sm-8" id="KadastroForm" style="display:none;">
+        <select class="form-control" id="il" name="input">
+            <option value="" disabled selected>il</option>
+            @foreach (var il in cityList)
+            {
+                <option value="@il.il_id">@il.ilAdi</option>
+            }
+        </select>
+        <select class="form-control" id="ilceListAdres2" name="input">
+            <option value="" disabled selected>İlçe</option>
+        </select>
+        <select class="form-control" id="MahalleList" name="input">
+            <option value="" disabled selected>Tapu Mahalle</option>
+        </select>
+        <input class="form-control" type="text" name="adaNo" value="" placeholder="Ado Numarası" />
+        <input class="form-control" type="text" name="parselNo" value="" placeholder="Parsel Numarası" />
+        <input class="form-control" type="text" name="binaNo" value="" placeholder="Bina Numarası" />
+        <input class="form-control" type="text" name="daireNo" value="" placeholder="Daire Numarası" />
+        <button type="button" class="form-control" id="search-btn" style=" color:white; background:#403f3f;">Ara</button>
+    </div>
 </form>
+
