--- a/CityExperWeb/Views/Tasinmaz/TasinmazDurum.cshtml
+++ b/CityExperWeb/Views/Tasinmaz/TasinmazDurum.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="panel-heading" style="font-size:24px;font-family:Roboto">
         Taşınmaz Durum
-        @*kerim*@
+        @*kerimaddss*@
     </div>
     <div class="row" style="border: 1px solid #CDEBF4;">
         <div class="col-md-9 col-sm-12 col-xs-12">
