--- a/CityExperWeb/Views/Tasinmaz/TasinmazDurum.cshtml
+++ b/CityExperWeb/Views/Tasinmaz/TasinmazDurum.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
+sdfghjk
 <link href="~/Assets/css/tasinmazDurum.css" rel="stylesheet" />
 <div class="container-fluid">
     <div class="panel-heading" style="font-size:24px;font-family:Roboto">
