--- a/CityExperWeb/Views/Shared/_Footer.cshtml
+++ b/CityExperWeb/Views/Shared/_Footer.cshtml
@@ -1,5 +1,4 @@
-﻿
-<link href="~/Assets/css/footer.css" rel="stylesheet" />
+﻿<link href="~/Assets/css/footer.css" rel="stylesheet" />
 <footer class="footer">
     <div class="footer">
         <p class="company"> KENTİST HARİTA MÜHENDİSLİĞİ VE MİMARLIK DANIŞMANLIK HİZMETLERİ SAN VE TİC LTD ŞTİ © 2012 </p>
