--- a/CityExperWeb/Views/Shared/_OneCikanListe.cshtml
+++ b/CityExperWeb/Views/Shared/_OneCikanListe.cshtml
@@ -13,9 +13,9 @@
             <img id="okIcon" src="https://page-assets.foxtons.co.uk/img/icons/chevron-left.svg" style="height: 31px; width: 31px;" />
         </div>
     </div>
-    <div class="col-md-10 shadow-lg p-3 mb-5 bg-white rounded" id="main-map" style="display:block;height:794px;margin-bottom:0px!important;border:1px solid #1f656c">
+    <div class="col-md-10 shadow-lg p-3 mb-5 bg-white rounded" id="main-map" style="display:block;height:790px;margin-bottom:0px!important;border:1px solid #1f656c">
     </div>
-    <div id="oneCikanFormu" class="col-md-2" style="overflow:auto; height:794px;border: 1px #1f656c solid;padding:0px;">
+    <div id="oneCikanFormu" class="col-md-2" style="overflow:auto; height:790px;border: 1px #1f656c solid;padding:0px;">
         <header class="w3-container1 w3-light-grey" style="background:#f9f3f3;">
             <div class="properties">
                 <div class="row ">
@@ -55,7 +55,7 @@
                                 <div class="col-md-9">
                                     <h3><a href="@Url.Action("TasinmazDurum","Tasinmaz")" style="color:#103f4f">Vucino Han</a></h3>
                                 </div>
-                                <div class="col-md-3" style="right:0px;">
+                                <div class="col-md-3" id="addFavorite" style="right:0px;">
                                     <img src="~/Assets/img/favoriEkle.png" />
                                 </div>
                                 <div class="col-md-12">
@@ -101,7 +101,7 @@
                                 <div class="col-md-9">
                                     <h3><a href="@Url.Action("TasinmazDurum","Tasinmaz")" style="color:#103f4f">Asmalı Han</a></h3>
                                 </div>
-                                <div class="col-md-3" style="right:0px;">
+                                <div class="col-md-3" id="addFavorite" style="right:0px;">
                                     <img src="~/Assets/img/favoriEkle.png" />
                                 </div>
                                 <div class="col-md-12">
@@ -146,7 +146,7 @@
                                 <div class="col-md-9">
                                     <h3><a href="@Url.Action("TasinmazDurum","Tasinmaz")" style="color:#103f4f">Asmalı Han</a></h3>
                                 </div>
-                                <div class="col-md-3" style="right:0px;">
+                                <div class="col-md-3" id="addFavorite" style="right:0px;">
                                     <img src="~/Assets/img/favoriEkle.png" />
                                 </div>
                                 <div class="col-md-12">
@@ -191,7 +191,7 @@
                                 <div class="col-md-9">
                                     <h3><a href="@Url.Action("TasinmazDurum","Tasinmaz")" style="color:#103f4f">Asmalı Han</a></h3>
                                 </div>
-                                <div class="col-md-3" style="right:0px;">
+                                <div class="col-md-3" id="addFavorite" style="right:0px;">
                                     <img src="~/Assets/img/favoriEkle.png" />
                                 </div>
                                 <div class="col-md-12">
@@ -236,7 +236,7 @@
                                 <div class="col-md-9">
                                     <h3><a href="@Url.Action("TasinmazDurum","Tasinmaz")" style="color:#103f4f">Zafer Han</a></h3>
                                 </div>
-                                <div class="col-md-3" style="right:0px;">
+                                <div class="col-md-3" id="addFavorite" style="right:0px;">
                                     <img src="~/Assets/img/favoriEkle.png" />
                                 </div>
                                 <div class="col-md-12">
@@ -282,7 +282,7 @@
                                 <div class="col-md-9">
                                     <h3><a href="@Url.Action("TasinmazDurum","Tasinmaz")" style="color:#103f4f">Zafer Han</a></h3>
                                 </div>
-                                <div class="col-md-3" style="right:0px;">
+                                <div class="col-md-3" id="addFavorite" style="right:0px;">
                                     <img src="~/Assets/img/favoriEkle.png" />
                                 </div>
                                 <div class="col-md-12">
