--- a/CityExperWeb/Views/Home/HomePage.cshtml
+++ b/CityExperWeb/Views/Home/HomePage.cshtml
@@ -40,12 +40,12 @@
             }
         }
 
-        #uyeOLScreen {
+        #satilikUyeOlScreen {
             margin-left: 0 !important;
             margin-right: 0 !important;
         }
 
-            #uyeOLScreen .limiter .container-login100 #uyeOlform {
+            #satilikUyeOlScreen .limiter .container-login100 #satilikUyeOlForm {
                 margin-left: 4%;
                 margin-right: auto;
             }
@@ -61,7 +61,7 @@
                 margin-right: auto !important;
             }
 
-            #uyeOLScreen .limiter .container-login100 #uyeOlform {
+            #satilikUyeOlScreen .limiter .container-login100 #satilikUyeOlForm {
                 margin-left: auto !important;
                 margin-right: auto !important;
             }
@@ -70,7 +70,7 @@
                 display: none;
             }
 
-            #gayrimenkulMobilLogo, #satilikKiralikMobilLogo, #uyeOlMobilLogo {
+            #gayrimenkulMobilLogo, #satilikKiralikMobilLogo, #satilikUyeOlMobilLogo {
                 display: block !important;
             }
         }
@@ -149,6 +149,83 @@
             </form>
         </div>
     </div>
+    @*<div id="gayrimenkulUyeOlScreen" style="display:none;">
+        <div class="limiter">
+            <div class="container-login100">
+                <div class="login100-pic js-tilt" style="margin-right: 2% !important;margin-left: auto;">
+                    <img src="../Assets/cityexper/logo.png" alt="img">
+                </div>
+                <div class="verticle" style=" width:1px;height: 430px;background-color: white;position:absolute;z-index:100; margin:-2% 0 0 3%;"></div>
+                <form id="gayrimenkulUyeOlForm">
+                    <div class="login100-pic js-tilt" id="gayrimenkulUyeOlMobilLogo" style="display:none;width: 253px;">
+                        <img src="../Assets/cityexper/logo.png" alt="IMG">
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Geçerli bir e-posta gerekli: ex@abc.xyz">
+                        <input class="input100" type="text" id="gEmailRegister" name="gEmailRegister" placeholder="Email">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Şifre girmelisiniz">
+                        <input class="input100" type="password" id="gPasswordRegister" name="gPasswordRegister" placeholder="Password">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="Şifre girmelisiniz">
+                        <input class="input100" type="password" id="gRePasswordRegister" name="gRePasswordRegister" placeholder="Re-Password ">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="İsim girmelesiniz">
+                        <input class="input100" type="text" name="gNameRegister" id="gNameRegister" placeholder="İsim">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-address-book" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="Soyad girmelisiniz">
+                        <input class="input100" type="text" name="gSurnameRegister" id="gSurnameRegister" placeholder="Soyad">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-address-book" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="Şirket ismi girmelisiniz">
+                        <input class="input100" type="text" name="company" id="company" placeholder="Şirket İsmi">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-address-book" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="wrap-input100 validate-input" data-validate="Telefon numarası girmelisiniz">
+                        <input class="input100" type="text" name="gPhoneNumberRegister" id="gPhoneNumberRegister" placeholder="Telefon No">
+
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-phone-square" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <div class="container-login100-form-btn">
+                        <button type="button" class="login100-form-btn" id="gUyeOlButton">ÜYE OL</button>
+                    </div>
+                    <div id="gErrorRegister" style="display:none">
+                    </div>
+                    <div class="text-center p-t-136" style="margin-top:13px;position:relative;z-index:1000;">
+                        <a id="gUyeOlBack" class="txt2" href="#" style="margin-right:10px;">
+                            <i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i> GERİ DÖN
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>*@
     <div id="satilikScreen" style="display:none">
         <div class="limiter">
             <div class="container-login100">
@@ -188,7 +265,7 @@
                             <span> ÜYE OL</span>
                             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                         </a>
-                    </div>    
+                    </div>
                     <div class="text-center p-t-136">
                         <a class="txt2" href="#">
                             ŞİFREMİ UNUTTUM!
@@ -205,15 +282,15 @@
             </div>
         </div>
     </div>
-    <div id="uyeOLScreen" style="display:none;">
+    <div id="satilikUyeOlScreen" style="display:none;">
         <div class="limiter">
             <div class="container-login100">
                 <div class="login100-pic js-tilt" style="margin-right: 2% !important;margin-left: auto;">
                     <img src="../Assets/cityexper/logo.png" alt="img">
                 </div>
                 <div class="verticle" style=" width:1px;height: 430px;background-color: white;position:absolute;z-index:100; margin:-2% 0 0 3%;"></div>
-                <form id="uyeOlform">
-                    <div class="login100-pic js-tilt" id="uyeOlMobilLogo" style="display:none;width: 253px;">
+                <form id="satilikUyeOlForm">
+                    <div class="login100-pic js-tilt" id="satilikUyeOlMobilLogo" style="display:none;width: 253px;">
                         <img src="../Assets/cityexper/logo.png" alt="IMG">
                     </div>
 
@@ -267,7 +344,7 @@
                     <div id="errorRegister" style="display:none">
                     </div>
                     <div class="text-center p-t-136" style="margin-top:13px;position:relative;z-index:1000;">
-                        <a id="uyeOlBack" class="txt2" href="#" style="margin-right:10px;">
+                        <a id="satilikUyeOlBack" class="txt2" href="#" style="margin-right:10px;">
                             <i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i> GERİ DÖN
                         </a>
                     </div>
@@ -294,14 +371,12 @@
             </div>
         </div>
     </footer>
-    @*<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous"></script>*@
+    <script src="~/Assets/cityexper/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="~/Assets/cityexper/js/main.js"></script>
+    <script src="~/Assets/js/notify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="~/Assets/cityexper/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <script src="~/Assets/js/notify.min.js"></script>
-    <script src="~/Assets/cityexper/js/main.js"></script>
+
     <script>
 
 
@@ -310,7 +385,7 @@
             if (x != "" && typeof x !== "undefined") {
                 $("#firstScreen").hide();
                 $("#gayrimenkulScreen").hide();
-                $("#uyeOlScreen").hide();
+                $("#satilikUyeOlScreen").hide();
                 $("#satilikScreen").show();
             }
             var y = $("#errorMessageRegister").val();
@@ -318,7 +393,7 @@
                 $("#firstScreen").hide();
                 $("#satilikScreen").hide();
                 $("#gayrimenkulScreen").hide();
-                $("#uyeOlScreen").show();
+                $("#satilikUyeOlScreen").show();
             }
             $("#gayrimenkulButton").click(function () {
                 $("#firstScreen").hide();
@@ -343,13 +418,13 @@
                 $("#satilikScreen").hide();
                 $("#firstScreen").hide();
                 $("#gayrimenkulScreen").hide();
-                $("#uyeOLScreen").show();
+                $("#satilikUyeOlScreen").show();
             });
-            $("#uyeOlBack").click(function () {
+            $("#satilikUyeOlBack").click(function () {
                 $("#satilikScreen").show();
                 $("#firstScreen").hide();
                 $("#gayrimenkulScreen").hide();
-                $("#uyeOLScreen").hide();
+                $("#satilikUyeOlScreen").hide();
             });
 
             $('#uyeOlButton').click(function () {
@@ -419,7 +494,6 @@
             });
 
             $('#gayrimenkulLoginButton').click(function () {
-                debugger;
                 const email = $('#gayriMenkulEmail').val();
                 const password = $('#gayriMenkulPassword').val();
                 var registerModel = {
@@ -447,9 +521,9 @@
                 });
             });
         });
-                                                                                                                                                                                                                                    //$('.js-tilt').tilt({
-                                                                                                                                                                                                                                    //    scale: 1.1
-                                                                                                                                                                                                                                    //})
+                                                                                                                                                                                                                                                    //$('.js-tilt').tilt({
+                                                                                                                                                                                                                                                    //    scale: 1.1
+                                                                                                                                                                                                                                                    //})
 
     </script>
 
